<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>info.jab.easyracer</groupId>
  <artifactId>java-cf</artifactId>
  <version>0.1.0</version>

  <properties>
    <java.version>23</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers-bom</artifactId>
          <version>1.20.4</version>
          <type>pom</type>
          <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.11.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-bom</artifactId>
          <version>3.27.2</version>
          <type>pom</type>
          <scope>import</scope>
      </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-bom</artifactId>
          <version>2.0.16</version>
          <type>pom</type>
          <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <scope>test</scope>
    </dependency>    
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.5.0</version>
          <executions>
              <execution>
                  <id>enforce</id>
                  <configuration>
                      <rules>
                          <dependencyConvergence />
                          <banDuplicatePomDependencyVersions />
                          <requireMavenVersion>
                              <version>3.9.9</version>
                          </requireMavenVersion>
                          <requireJavaVersion>
                              <version>23</version>
                          </requireJavaVersion>
                          <bannedDependencies>
                              <excludes>
                                  <exclude>org.projectlombok:lombok</exclude>
                              </excludes>
                          </bannedDependencies>
                      </rules>
                      <fail>true</fail>
                  </configuration>
                  <goals>
                      <goal>enforce</goal>
                  </goals>
              </execution>
          </executions>
      </plugin>    
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
              <compilerArgument>-Xlint:all</compilerArgument><!-- -Werror -->
              <compilerArgument>--enable-preview</compilerArgument>
              <release>${java.version}</release>
          </configuration>
      </plugin>
    </plugins>
  </build>
</project>